------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry.

Al
------------------------------------------------------------------------------

Thu Feb 03 17:40 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Minor and cosmetic fixes to changes committed by Christoph
	Plattner.

Wed Feb 02 2000  Christop Plattner  <Christoph.Plattner@dot.at>

	* init/main.c (init_task): use /dev/ttys0 instead of /dev/tty1
	if serial console is used.

	* arch/i86/drivers/char/serial.c (port;): added function to setup
	tty termios for the serial console.
	(rs_init): rs_init checks now, if a serial port has been already
	checked and setup by serial console initialization
	(init_console): beside the rs_init() also the tty termios are
	initialized und updated for the serial console port.

Wed Feb 02 2000  Christop Plattner  <Christoph.Plattner@dot.at>

	* include/linuxmt/config.h (DEF_SETUPSEG): it should be defined
	as DEF_INITSEG + 0x20, otherwise two things are to edit.

	* init/main.c (init_task): use serial console as default output

	* Makefile (include/linuxmt/version.h): added sync against nfs
	race problems on the host machines

	* arch/i86/drivers/char/serial.c (rs_init): the printk saying
	which ttys[0123] is setup has to use ttyno instead of i !

	* include/linuxmt/ntty.h: added external definition to def_vals

Tue Feb 01 2000  Christop Plattner  <Christoph.Plattner@dot.at>

	* arch/i86/Makefile (clean): added Boot.map and Setup.map in the
	clean rule. Also crt0.s was not cleaned yet.

Mon Jan 31 2000  Christop Plattner  <Christoph.Plattner@dot.at>

	* include/arch/debug_disp.h: added display port to output debug
	messages to LED, hex-display or logic analysator.

	* arch/i86/mm/init.c (setup_mm): reduse ram for ramdisk.
